Give text the ability to slightly overflow it's box. Fixes #2
Keeps the flow of the page going if ascenders / descenders / weird linux font rendering means that the text in the main title box slightly overflows it's bounds.

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ h2 {
 }
 
 .daftcow {
+    overflow: visible;
+}
+
+.daftcow img {
     margin:  0 auto;
     display: block;
 }
